--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
+
+		<!-- Libraries -->
+		<script src="//unpkg.com/mathlive"></script>
 		
 		<title>Playfair</title>
 		%sveltekit.head%
